--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/png" href="https://icons.veryicon.com/png/o/object/item-icons/sunglasses-21.png"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>NYC SSI</title>
+  <title>NYC School Safety</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
