--- a/index.html
+++ b/index.html
@@ -1,63 +1,186 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+  <head>
+    <style>
+      /* width */
+      ::-webkit-scrollbar {
+        width: 15px;
+      }
 
-<head>
-  <link rel="icon" type="image/png" href="https://icons.veryicon.com/png/o/object/item-icons/sunglasses-21.png"/>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>NYC School Safety</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
+      /* Track */
+      ::-webkit-scrollbar-track {
+        border-radius: 10px;
+        background: #3a3636;
+        opacity: 0.5;
+      }
 
-<body>
-  <div class = "menu">
-    <h2>NYC School Safety Index</h2>
-    <p>A map indicating the safety level of over 500 schools around the city of New York. Schools categorized by total recorded crime count.</p>
-    <p>Click on any location to view a school's name and total crime count (on record).</p>
-    <p class = "cerulean">Cerulean Blue: <5 recorded crimes within school (or N/A)</p>
-    <p class = "pantone-yellow">Pantone Yellow: 5 - 15 recorded crimes within school</p>
-    <p class = "brink-pink">Brink Pink: 15+ recorded crimes within school</p>
-  </div>
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #707070;
+        border-radius: 10px;
+      }
 
-  <div class = "counts">
-    <p id = "blue-count">325</p>
-    <p id = "yellow-count">6</p>
-    <p id = "pink-count">162</p>
-  </div>
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #08aee0;
+      }
+    </style>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://icons.veryicon.com/png/o/object/item-icons/sunglasses-21.png"
+    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>NYC SSI</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  
-  <div class = "map-div">
-    <div id="map"></div>
-  </div>
+  <body>
+    <div class="menu">
+      <h2>NYC School Safety Index</h2>
+      <p>
+        A map indicating the safety level of over 500 schools around the city of
+        New York. Schools categorized by total recorded crime count.
+      </p>
+      <p>
+        Click on any location to view a school's name and total crime count (on
+        record).
+      </p>
+      <p class="cerulean">
+        Cerulean Blue: <5 recorded crimes within school (or N/A)
+      </p>
+      <p class="pantone-yellow">
+        Pantone Yellow: 5 - 15 recorded crimes within school
+      </p>
+      <p class="brink-pink">Brink Pink: 15+ recorded crimes within school</p>
+    </div>
 
+    <div class="counts">
+      <p id="blue-count">325</p>
+      <p id="yellow-count">6</p>
+      <p id="pink-count">162</p>
+    </div>
 
-  <div class = "table-intro">
-    <h3>Everybody deserves to know how <strong>safe</strong> their children's schools are.</h3>
-    <p>View a data-driven NYC school safety table - the same data we used to map out and categorize schools in NYC ↓ </p>
-  </div>
-  
-    <div><iframe width="99.5%" title="2010 - 2016 School Safety Report" height="700" src="https://data.cityofnewyork.us/w/qybk-bjjc/25te-f2tw?cur=Omw4CSzrtZR&from=root" frameborder="0"scrolling="no"><a href="https://data.cityofnewyork.us/Education/2010-2016-School-Safety-Report/qybk-bjjc" title="2010 - 2016 School Safety Report" target="_blank">2010 - 2016 School Safety Report</a></iframe>
+    <div class="map-div">
+      <div id="map"></div>
+    </div>
 
+    <div class="table-intro">
+      <h3>
+        Everybody deserves to know how <strong>safe</strong> their children's
+        schools are.
+      </h3>
+      <p>
+        ↓ Report safety concerns or view an official NYC school safety table -
+        the same data we used to map out and categorize schools in NYC
+      </p>
+    </div>
 
-  </div>
-  
-  
+    <div class="crime-table">
+      <iframe
+        width="94%"
+        title="2010 - 2016 School Safety Report"
+        height="700"
+        src="https://data.cityofnewyork.us/w/qybk-bjjc/25te-f2tw?cur=Omw4CSzrtZR&from=root"
+        frameborder="no"
+        scrolling="no"
+        ><a
+          href="https://data.cityofnewyork.us/Education/2010-2016-School-Safety-Report/qybk-bjjc"
+          title="2010 - 2016 School Safety Report"
+          target="_blank"
+          >2010 - 2016 School Safety Report</a
+        ></iframe>
+    </div>
 
-  
-  <script src="script.js"></script>
-  
-</body>
-
+    <div class = "report">
+      <div class = "report-left">
+        <h1>Report a safety concern in an NYC School</h1>
+        <p>As a parent with a child in an NYC School, you can file a complaint in the case that your child was harassed, abused, discriminated against. You can also report a fight or specific safety issue in a school. Information on the appropriate complaint form and contacts can be found to the right.</p>
+      </div>
+      <div class = "report-right">
+        <div class = "report-choice">
+          <h3>Report fights or other safety issues not related to building maintenance</h3>
+          <p>The Department of Education reviews and addresses anonymous complaints. If you do not provide information about yourself, they will not be able to contact you to follow up.</p>
+          <ul>
+            <li>Call: 311</li>
+            <li>Call: 212-NEW-YORK (212-639-9675)</li>
+          </ul>
+        </div>
+        <div class = "report-choice">
+          <h3>Report corporal punishment or verbal abuse (Chancellor's Regulation A-420, A-421)</h3>
+          <ul>
+            <li><a href = "https://www.nycenet.edu/cpu">File a complaint on OSI's reporting system ☍</a></li>
+            <li>Call: (718) 935-3800</li>
+            <li>Notify school principal</li>
+        </div>
+        <div class = "report-choice">
+          <h3>Report student to student discrimination, harassment, intimidation, bullying (Chancellor's Regulations A-832)</h3>
+          <ul>
+            <li><a href = "https://cdn-blob-prd.azureedge.net/prd-pws/docs/default-source/default-document-library/a-832-reporting-form.pdf?sfvrsn=43ca4491_6&_sm_au_=iHV41FLLRZfsSrk5J2HLjKs04kK0t">Submit Complaint Reporting Form to school principal ☍</a></li>
+            <li><a href = "https://www.nycenet.edu/bullyingreporting">Submit a complaint on nycenet.edu/bullyingreporting ☍</a></li>
+            <li>Call: 718-935-2288</li>
+            <li>Notify school principal</li>
+        </div>
+        <div class = "report-choice">
+          <h3>Report complaints of discrimination or harassment by DOE employees (Chancellor’s Regulation A-830)</h3>
+          <ul>
+            <li><a href = "https://www.nycenet.edu/oeo">File a complaint electronically ☍</a></li>
+            <li>Call: 718-935-3320</li>
+            <li>Mail a complaint to or Visit the OEO office at 65 Court Street, Brooklyn, NY 11201</li>
+        </div>
+        <div class = "report-choice">
+          <h3>Report student-to-student sexual harassment (Chancellor’s Regulation A-831)</h3>
+          <ul>
+            <li><a href = "https://cdn-blob-prd.azureedge.net/prd-pws/docs/default-source/default-document-library/a-831-reporting-form.pdf?sfvrsn=43ca449&_sm_au_=iHV41FLLRZfsSrk5J2HLjKs04kK0t">Submit Complaint Reporting Form to School Principal ☍</a></li>
+            <li>Contact the Title IX Coordinator at Title_IX_Inquiries@schools.nyc.gov </li>
+            <li>Contact the principal, the Sexual Harassment Prevention Liaison or any staff member at your school.</li>
+        </div>
+        <div class = "report-choice">
+          <h3>More info</h3>
+          <ul><li><a href = "https://www.schools.nyc.gov/school-life/school-environment/get-help/parent-complaints-and-appeals">Visit the schools.nyc.gov website's complaints page</a></li></ul>
+        </div>
+      </div>
+    </div>
+    <div class = "report2">
+      <div class = "report-left">
+        <h1>For Educators and School Admins: Learn how to identify and address school safety concerns</h1>
+        <p>Schoolsafety.gov offers various resources, such as guides, that can help school employees make schools a safer place.</p>
+      </div>
+      <div class = "report-right2">
+        <div class = "guide">
+          <h3><a href = "https://www.nc2s.org/resource/school-threat-assessment-toolkit/">School Threat Assessment Toolkit ☍</a></h3>
+          <p>This toolkit is designed to aid schools in employing behavioral threat assessment and management as part of a comprehensive violence prevention strategy. The toolkit offers guidance on training, implementation, and assessment of school threat assessment teams. It aims to ensure fidelity to student rights while providing practical tools like documents, forms, videos, and additional resources to support schools’ efforts.</p>
+        </div>
+        <div class = "guide">
+          <h3><a href = "https://www.secretservice.gov/sites/default/files/reports/2020-10/USSS_NTAC_Enhancing_School_Safety_Guide.pdf">Enhancing School Safety Using a Threat Assessment Model ☍</a></h3>
+          <p>This guide provides actionable steps that schools can take to develop comprehensive targeted violence prevention plans and create processes and procedures for conducting threat assessments.</p>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
